--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
-    "cors": "^2.8.5"
+    "node-fetch": "^2.6.7",  // ← カンマが必要
+    "cors": "^2.8.5"         // ← 最後の要素にはカンマ不要だがOKにする場合もあり
   }
 }
